--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,13 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
         <link rel="stylesheet" href="%sveltekit.assets%/style.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <noscript>
+            <style>
+               .year-list {
+                    display: none !important;
+                }
+            </style>
+        </noscript>
 		%sveltekit.head%
 
 		<script type="module">
